--- a/minecraft_tree_identification.html
+++ b/minecraft_tree_identification.html
@@ -1,6 +1,6 @@
 <h1>Minecraft Tree Identification</h1>
 
-Repo: https://github.com/AghastComet/Minecraft-Tree-Finder<br><br>
+Repo: <a href="https://github.com/AghastComet/Minecraft-Tree-Finder">github.com/AghastComet/Minecraft-Tree-Finder</a><br><br>
 
 This is a neural network using mobilenet and faster rcnn to try to identify trees in Minecraft. This was mainly an attemt to get more experiance working with images in pytorch and using screenshots from Minecraft makes it easy to get data. Unfortunately, the resulting network doesn't actually work. I want to work more with this before I declare it a total failure. My current ideas are to add more data or to try different data. I think there might be a deeper issue than just not enough data, so testing with a different dataset, maybe something closer to what mobilenet was trained with, might increase the perforance and if it doesn't then I want to try with more data.<br><br>
 
